# tauri-ide-next

./: .gitignore  README.md  package.json  pnpm-workspace.yaml  vite.config.ts
crates/: Cargo.toml
crates/app/: Cargo.toml  Cross.toml  tauri.conf.json
crates/app/capabilities/: capability.json
crates/app/src/: commands.rs  lib.rs  main.rs
crates/app/src/core/: consts.rs  handle.rs  menu.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/plugins/ai/: Cargo.toml  build.rs  package.json  rollup.config.js
crates/plugins/ai/guest-js/: index.ts  types.ts
crates/plugins/ai/permissions/autogenerated/: reference.md
crates/plugins/ai/permissions/autogenerated/commands/: send_ask.toml
crates/plugins/ai/permissions/schemas/: schema.json
crates/plugins/ai/src/: api-iife.js  lib.rs
crates/plugins/ai/src/apis/: chat_completion.rs  create_image.rs  mod.rs
crates/plugins/ai/src/core/: ai_sdk.rs  commands.rs  mod.rs
crates/plugins/dm/: Cargo.toml  build.rs  package.json
crates/plugins/dm/guest-js/: index.ts
crates/plugins/dm/permissions/autogenerated/: reference.md
crates/plugins/dm/permissions/schemas/: schema.json
crates/plugins/dm/src/: api-iife.js  commands.rs  lib.rs
crates/plugins/mysql/: Cargo.toml  build.rs  package.json  rollup.config.js
crates/plugins/mysql/guest-js/: index.ts
crates/plugins/mysql/permissions/autogenerated/: reference.md
crates/plugins/mysql/permissions/autogenerated/commands/: execute_sql.toml  link.toml
crates/plugins/mysql/permissions/schemas/: schema.json
crates/plugins/mysql/src/: api-iife.js  commands.rs  errors.rs  lib.rs  models.rs
crates/plugins/redis/: Cargo.toml  build.rs  package.json
crates/plugins/redis/guest-js/: index.ts  types.ts
crates/plugins/redis/permissions/autogenerated/: reference.md
crates/plugins/redis/permissions/autogenerated/commands/: create_link.toml  delete_link.toml  find.toml  get_memory_info.toml  get_server_info.toml  test_link.toml
crates/plugins/redis/permissions/schemas/: schema.json
crates/plugins/redis/src/: api-iife.js  commands.rs  errors.rs  lib.rs  models.rs  scope.rs  utils.rs
crates/plugins/sqlite/: Cargo.toml  build.rs  package.json  rollup.config.js
crates/plugins/sqlite/guest-js/: index.ts  types.ts
crates/plugins/sqlite/permissions/autogenerated/: reference.md
crates/plugins/sqlite/permissions/autogenerated/commands/: get_history_query_list.toml  get_links.toml  save_history.toml  save_link.toml
crates/plugins/sqlite/permissions/schemas/: schema.json
crates/plugins/sqlite/src/: api-iife.js  commands.rs  core.rs  lib.rs  model.rs
crates/plugins/terminal/: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js
crates/plugins/terminal/guest-js/: index.ts  types.ts
crates/plugins/terminal/permissions/autogenerated/: reference.md
crates/plugins/terminal/permissions/autogenerated/commands/: clear_terminal.toml  create_shell.toml  create_terminal.toml  get_terminal_unique_keys.toml  read_from_pty.toml  resize_pty.toml  write_to_pty.toml
crates/plugins/terminal/permissions/schemas/: schema.json
crates/plugins/terminal/src/: api-iife.js  commands.rs  errors.rs  lib.rs  models.rs  utils.rs
docs/: build.md  codemirror.md  fs.md  index.md  plugin.md
ui/ai/: .gitignore  index.html  package.json  vite.config.ts
ui/ai/src/: App.vue  main.ts
ui/ai/src/components/aside/: DialogBox.vue
ui/ai/src/components/common/: AskForm.vue  LeftMenu.vue
ui/ai/src/components/container/: Welcome.vue
ui/ai/src/components/layout/: MainContainer.vue
ui/ai/src/resources/theme/: dark.json  light.json
ui/ai/src/style/: reset.scss  styles.scss
ui/db/: index.html  package.json  vite.config.ts
ui/db/src/: App.vue
ui/db/src/components/common/: FileTree.vue  PalmIcon.vue
ui/db/src/components/dataManger/: CreateLink.vue  DataTree.vue  DisplayError.vue  Layout.vue  WorkPanel.vue
ui/db/src/core/: sandbox.ts
ui/db/src/framework/: MicroView.vue
ui/db/src/resources/theme/: light.json
ui/db/src/style/: styles.scss
ui/db/src/utils/: keyboard.ts
ui/editor/: index.html  package.json  tsconfig.json  vite.config.ts
ui/editor/src/components/common/: AppFooter.tsx  FileTree.vue
ui/editor/src/components/dataManger/: Layout.vue  Result.vue
ui/editor/src/components/editor/: CodeEditor.vue  FileTree.vue  Interactive.vue  Layout.vue  Terminal.vue
ui/editor/src/components/extends/: Layout.vue
ui/editor/src/components/git/: Layout.vue
ui/editor/src/components/gpt/: Layout.vue
ui/editor/src/components/markdown/: FileTabs.vue  FileTree.vue  Layout.vue  WorkPanel.vue
ui/editor/src/components/music/: Layout.vue
ui/editor/src/framework/: MicroView.vue
ui/editor/src/store/: file.ts  user.ts
ui/editor/src/style/: reset.scss
ui/markdown/: index.html  vite.config.ts
ui/markdown/src/: types.ts  vite-env.d.ts
ui/markdown/src/bridge/: index.ts
ui/markdown/src/core/: theme.ts
ui/markdown/src/framework/: MicroView.vue
ui/markdown/src/store/: app.ts
ui/music/: .env  .prettierrc.json  music.html  package.json  vite.config.ts
ui/music/src/: main.ts
ui/music/src/core/: palm.ts
ui/music/src/framework/: MicroView.vue
ui/music/src/store/: appCache.ts  index.ts
ui/plugins/palm-editor/: package.json  rollup.config.build.js  rollup.config.js
ui/plugins/palm-editor/example/: editor.html  index.html  index.ts  rollup.config.js
ui/plugins/palm-editor/src/: index.ts  types.ts
ui/plugins/palm-editor/src/core/: editor.ts  merge.ts
ui/plugins/palm-editor/src/css/: reset.scss
ui/plugins/palm-editor/src/themes/: colors.ts  index.ts  theme-create.ts
ui/plugins/palm-util/: package.json  rollup.config.js  tsconfig.base.json  tsconfig.json
ui/plugins/palm-util/example/: index.html  index.ts  index.umd.js  rollup.config.js
ui/plugins/palm-util/src/: index.ts  type.ts
ui/redis/: index.html  package.json  redis.html
ui/redis/src/: App.vue  main.ts  types.ts
ui/redis/src/core/: theme.ts
ui/redis/src/store/: app.ts  index.ts  redis.ts
ui/redis/temp/: auto-components.d.ts
(+39 files in other folders)
