[package]
name = "common"
exclude = ["/examples"]
version = { workspace = true}
authors = { workspace = true}
description = { workspace = true}
edition = { workspace = true}
rust-version = { workspace = true}

[dependencies]
mysql = "24.0.0"
anyhow = { workspace = true } 
thiserror = { workspace = true } 
serde = { workspace = true,  features = ["derive"]}
serde_json = { workspace = true}